--- a/index.Rmd
+++ b/index.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
   
   
 ## Context 
-  Understanding the functionning and the dynamics of living organisms has lead in the last twenty years to the emergence of cross connected areas of research like biologging and movement ecology. These fields of reasearch are based on growing fluxes of observations,either in marine or in terrestrial sytems, which have been made possible through the broad development of electronic devices allowing to track and monitor foraging individuals like mammals, bird, vessels, or plant gatheres.
+  Understanding the behaviour and the dynamics of living organisms has lead in the last twenty years to the emergence of cross connected areas of research like biologging and movement ecology. These fields of research rely on large and ever-increasing amounts of observations, which have been collected thanks to the development of electronic devices that track and monitor numerous terrestrial and marine organisms, such as mammals, birds or fishers (fishing vessels).
 
 ## Ecosystem 
 
